--- a/ros/apex_playground/package.xml
+++ b/ros/apex_playground/package.xml
@@ -43,17 +43,25 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>common_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_runtime</build_depend>
+  <build_depend>poppy_torso_controllers</build_depend>
+  <build_depend>poppy_msgs</build_depend>
+  <build_depend>poppy_torso_controllers</build_depend>
+
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>common_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>trajectory_msgs</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
-
+  <run_depend>poppy_torso_controllers</run_depend>
+  <run_depend>poppy_msgs</run_depend>
+  <run_depend>poppy_torso_controllers</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
